# oz_assignment

1/dummy_data_generator/: config.yaml  generate_dummy_data.py  pyproject.toml
6일차/: Ch21_task.ipynb  Ch22_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  Ch25_task.ipynb  Ch26_task.ipynb  Ch27_task.ipynb  Ch28_task.ipynb  Ch29_task.ipynb  Ch30_task.ipynb  Ch31_task.ipynb  Ch32_task.ipynb
User Input Information/: User Input Information.html
index/: index.css  index.html
join/: join.css  join.html  join.js
monster game/: monster game.html
문제/: Ch04_task(code).ipynb
문제2/: Chapter0508_과제.ipynb
설문조사/: test1.html
자기소개/: test.css  test.html
채팅/: chatting.css  chatting.html
