[tool.poetry]
name = "심화반"
version = "0.1.0"
description = ""
authors = ["jihyun-B <qkck231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
faker = "^26.2.0"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
